# favr

./: Readme.md  favr.cabal  stack.yaml  uuagc_options
avr-examples/: blink.asm  blink2.asm  example.asm  example3.asm
examples/: ex1.favr  ex2.favr  ex3.favr
src/: Ast.ag  Ast.hs  LCAST.hs  Main.hs  Parser.hs  Test.ag
src-ag/: Ast.ag  CodeGen.ag
test/: example2.asm  test.favr  test1.hs
