name:                favr
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/favr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  src/Test.ag

executable favr
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Ast, Parser
  build-depends:       base >= 4.7 && < 5,
                       uu-parsinglib >= 2.9.1.1,
                       uuagc-cabal >= 1.0.6.0
